# easypqp

./: CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_library.tsv
.github/workflows/: changelog.yml  ci.yml  dockerpublish.yml  pythonpublish.yml
easypqp/: __init__.py  convert.py  fragpipe_utils.py  index.py  library.py  main.py  openswathassaygenerator.py  openswathdecoygenerator.py  sage.py  targetedfileconverter.py  test_convert.py  unimoddb.py  util.py
tests/: README.md  test_convert.py  test_convertsage.py  test_generate_ionseries.py  test_insilico_library.py  test_library_diannpqp.py  test_openswathassay_generator.py  test_openswathdecoy_generator.py  test_targetedfileconverter.py
tests/_regtest_outputs/: test_convertsage.test_convertsage.out  test_insilico_library.test_insilico_library.out  test_library_diannpqp.test_library_diannpqp.out  test_openswathassay_generator.test_openswath_assay_generator.out  test_openswathdecoy_generator.test_openswath_decoy_generator.out  test_targetedfileconverter.test_targeted_file_converter_pqptotsv.out  test_targetedfileconverter.test_targeted_file_converter_tsvtopqp.out
tests/data/: HepG2_rep1_small.peakpkl  HepG2_rep1_small.psmpkl  config.json  library_targets.pqp  matched_fragments.sage.tsv  test_transition_list.pqp  test_transition_list.tsv
